--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,10 @@
           <h3 id='pr2'>Airless</h3>
         </div>
         <div id='pr2' class="work-description">
+          <div class="project-links">
+            <a href="http://mischatch.me/Airless/">Live</a>
+            <a href="https://github.com/mischatch/Airless">GitHub</a>
+          </div>
           <h4>Airless is a platforming game where the aim is to escape collision between blue circle(operated by users mouse) and red tiles for as much as you can.</h4>
         </div>
       </div>
@@ -44,6 +48,10 @@
           <h3 id='pr3'>UnderDOMe</h3>
         </div>
         <div id='pr3' class="work-description">
+          <div class="project-links">
+            <a href="http://mischatch.me/UnderDOMe/">Live</a>
+            <a href="https://github.com/mischatch/UnderDOMe">GitHub</a>
+          </div>
           <h4>UnderDOMe is a DOM manipulation library inspired by jQuery and writen using JavaScript. It supports some of the most important jQuery features.</h4>
         </div>
       </div>
