--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <img id="photo" src="assets/photo-bw.jpg" alt="photo">
       </div>
       <div class="about">
-        <h2>I'm a Software Developer, who's extremely passionate about problem-solving
-          and achieving results. Team player with a pairing experience. Having a graphic
-          and motion design background, I always give attention to UX/UI component.</h2>
+        <h2>I’m Mikhail and I’m New York based full-stack developer. I love to architect innovative and comprehensive experiences.
+            Having a graphic and motion design background, I always give attention to UX/UI component.
+            <br>My tools are Ruby, Rails, React and Redux</h2>
       </div>
       <div class="links">
         <span> <a href="mailto:mischa.tch@gmail.com">Mail</a> </span>
