--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,10 @@
 
   </head>
   <body class="works-body">
-    <div class="back">
-      <a href="index.html">back</a>
+
+      <a class="back" href="index.html">back</a>
       <!-- ← -->
-    </div>
+
 
     <div id="works" class="work">
 
