added google analytics and favicon

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110955206-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110955206-1');
+    </script>
+
     <meta charset="utf-8">
     <title>Mikhail Cheburakhtin portfolio v2.0</title>
 
+    <link rel="icon" href="assets/fav.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
 
-    <!-- <canvas id="canvas-back" width="300" height="300">
-      Your browser doesn't support HTML5
-    </canvas> -->
     <div class="landing">
 
       <div class="hello">
