changed title and readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <meta charset="utf-8">
-    <title>Mikhail Cheburakhtin portfolio v2.0</title>
+    <title>Mikhail Cheburakhtin portfolio website</title>
 
     <link rel="icon" href="assets/fav.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
