fixed background, back button orientation and animation

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,11 @@
   </head>
   <body class="works-body">
 
-      <a class="back" href="index.html">back</a>
+      <a class="back" href="index.html">
+        <p class="arrow">←</p>
+        <p class="backname">back</p>
+        <p class="arrow">←</p>
+      </a>
       <!-- ← -->
 
 
