added scraper to projects

--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,19 @@
         </div>
       </div>
 
+      <div class="project4">
+        <div class="work-name">
+          <h3 id='pr4'>Scraper</h3>
+        </div>
+        <div id='pr4' class="work-description">
+          <div class="project-links">
+            <!-- <a href="http://mischatch.me/UnderDOMe/">Live</a> -->
+            <a href="https://github.com/mischatch/amazon-review-scraper-script">GitHub</a>
+          </div>
+          <h4>Browser console script for scraping reviews on selected amazon product.</h4>
+        </div>
+      </div>
+
     </div>
 
 
