--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110955206-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
