--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </ul>
         <!-- __________________sent_email______________________ -->
         <div class="email-me">
-          <h3>Email me at <a href="mailto:mischa.tch@gmail.com">mischa.tch@gmail.com</a></h3>
+          <h3>Email<a href="mailto:mischa.tch@gmail.com">mischa.tch@gmail.com</a></h3>
         </div>
       </div>
     </div>
