--- a/index.html
+++ b/index.html
@@ -1,183 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-<<<<<<< HEAD
-    <meta charset="utf-8">
-    <link rel="icon" href="https://s3.us-east-2.amazonaws.com/clone-app-dev/m_fivicon.png">
-    <link rel="stylesheet" type="text/css" href="./css/css-reset.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Enriqueta:400,700|Montserrat:200,300,400,500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-    $(document).ready(function(){
-      $("a").on('click', function(event) {
-        if (this.hash !== "") {
-          event.preventDefault();
-          var hash = this.hash;
-          $('html, body').animate({
-            scrollTop: $(hash).offset().top
-          }, 1000, function(){
-
-      window.location.hash = hash;
-    });
-  }
-});
-});
-    </script>
-    <title>Mikhail Cheburakhtin</title>
-  </head>
-  <body>
-    <header>
-      <!-- header with links on the page -->
-      <a id="new" href="http://www.mischatch.me/">mischatch.me v2.0</a>
-      <a href='#about'>About</a>
-      <a href='#works'>Works</a>
-      <a href='#resume'>Resume</a>
-      <a href='#contact'>Contact</a>
-    </header>
-    <!-- __________________photo______________________ -->
-    <div id="about" class="photo-cont">
-      <div class="photo">
-      </div>
-    </div>
-    <!-- __________________about______________________ -->
-    <div class="line-cont">
-    </div>
-    <div  class="about-top">
-      <!-- name and about top -->
-      <div class="about-top-cont">
-        <h1>Mikhail Cheburakhtin</h1>
-        <p>I'm a Software Developer, who's extremely passionate about problem-solving and achieving results. Team player with a pairing experience.
-        Having a graphic and motion design background, I always give attention to UX/UI component.</p>
-      </div>
-    </div>
-    <div id="works"></div>
-    <!-- _____________new_projects___________________________ -->
-    <div  class="projects">
-      <div class="row">
-        <div class="first">
-          <a href="http://flounce-app.herokuapp.com/">
-          <div class="img">
-            <img class="pr-img" src="https://s3.us-east-2.amazonaws.com/clone-app-dev/Screen+Shot+2017-09-08+at+10.59.26+AM.png" alt="">
-          </div></a>
-          <div class="txt">
-            <a href="http://flounce-app.herokuapp.com/">
-            <h2>Flounce</h2>
-            <h6>Flounce app is a full-stack web application inspired by Behance. It uses Ruby on Rails on the backend, with a PostgreSQL as it's database and React.js with a Redux framework on the frontend.</h6></a>
-            <div class="git">
-              <a href="https://github.com/mischatch/Flounce-app">github</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="first">
-          <a href="http://mischatch.me/Airless/">
-          <div class="img">
-            <img class="pr-img" src="https://s3.us-east-2.amazonaws.com/clone-app-dev/game-app.png" alt="">
-          </div></a>
-          <div class="txt">
-            <a href="http://mischatch.me/Airless/">
-            <h2>Airless</h2>
-            <h6>Airless is a platforming game where the aim is to escape collision between blue circle(which is operated by users mouse and red tiles for as much as you can.</h6></a>
-            <div class="git">
-              <a href="https://github.com/mischatch/Airless">github</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="first">
-          <a href="http://mischatch.me/UnderDOMe/">
-          <div class="img">
-              <img class="pr-img" src="https://s3.us-east-2.amazonaws.com/clone-app-dev/Screen+Shot+2017-09-08+at+12.18.44+PM.png" alt="">
-          </div></a>
-          <div class="txt">
-            <a href="http://mischatch.me/UnderDOMe/">
-            <h2>UnderDOMe</h2>
-            <h6>UnderDOMe is a DOM manipulation library inspired by jQuery and writen using JavaScript. It supports some of the most important jQuery features.</h6></a>
-            <div class="git">
-              <a href="https://github.com/mischatch/UnderDOMe">github</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- _____________skills___________________________ -->
-    <div class="skills-cont">
-      <div class="skills">
-        <ul>
-          <li>
-            <i class="devicon-react-original"></i>
-            <br>React</li>
-          <li>
-            <img src="https://s3.us-east-2.amazonaws.com/clone-app-dev/redux_logo-01.svg" class="redux">
-            <br>Redux</li>
-          <li>
-            <i class="devicon-javascript-plain"></i>
-            <br>JavaScript</li>
-          <li>
-            <i class="devicon-ruby-plain"></i>
-            <br>Ruby</li>
-          <li>
-            <i class="devicon-rails-plain"></i>
-            <br>Rails</li>
-          <li>
-            <i class="devicon-postgresql-plain"></i>
-            <br>PostgreSQL</li>
-          <li>
-            <i class="devicon-jquery-plain"></i>
-            <br>jQuery</li>
-          <li>
-            <i class="devicon-html5-plain"></i>
-            <br>HTML5 + Canvas</li>
-          <li>
-            <i class="devicon-css3-plain"></i>
-            <br>CSS3</li>
-        </ul>
-      </div>
-    </div>
-    <!-- __________________resume______________________ -->
-    <div id="resume"></div>
-    <div class="resume-cont" >
-      <div class="resume">
-        <a href="https://s3.us-east-2.amazonaws.com/clone-app-dev/mischatch_cv2017_cc15_4.pdf"><h2>Resume</h2></a>
-      </div>
-    </div>
-    <!-- __________________contact______________________ -->
-    <div class="contact-cont" id="contact">
-      <div class="contact">
-        <ul>
-          <li>
-            <a href="https://github.com/mischatch">
-            <i class="devicon-github-plain"></i>
-            <br>GitHub</a></li>
-
-          <li>
-            <a href="https://www.linkedin.com/in/mikhail-cheburakhtin/">
-            <img src="https://s3.us-east-2.amazonaws.com/clone-app-dev/linkedin-original-01.svg" class="linkedin" alt="">
-            <br>LinkedIn</a></li>
-
-          <li>
-            <a href="https://www.facebook.com/mischa.tch">
-            <i class="devicon-facebook-plain"></i>
-            <br>Facebook</a></li>
-
-        </ul>
-        <!-- __________________sent_email______________________ -->
-        <div class="email-me">
-          <h3>Email<a href="mailto:mischa.tch@gmail.com">mischa.tch@gmail.com</a></h3>
-        </div>
-      </div>
-    </div>
-
-  </body>
-=======
         <!-- Global site tag (gtag.js) - Google Analytics -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110955206-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -191,7 +15,7 @@
     <title>Mikhail Cheburakhtin portfolio website</title>
 
     <link rel="icon" href="assets/fav.png">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
   </head>
@@ -210,7 +34,7 @@
       </div>
       <div class="links">
         <span> <a href="mailto:mischa.tch@gmail.com">Mail</a> </span>
-        <span> <a href="https://s3.us-east-2.amazonaws.com/clone-app-dev/mischatch_cv2017_cc15_4.pdf">Resume</a> </span>
+        <span> <a href="https://s3.us-east-2.amazonaws.com/clone-app-dev/mischatch_cv2017_cc15_3.pdf">Resume</a> </span>
         <span> <a href="https://www.linkedin.com/in/mikhail-cheburakhtin/">LinkedIn</a> </span>
         <span> <a href="https://github.com/mischatch">GitHub</a> </span>
         <span> <a href="https://www.behance.net/mischa_tch">Behance</a> </span>
@@ -222,7 +46,42 @@
 
     </div>
 
+
+
+    <!-- <div id="works" class="work">
+
+      <div class="project">
+        <div class="work-name">
+          <h3 id='pr1'>Flounce</h3>
+        </div>
+        <div id='pr1' class="work-description">
+          <h4>Flounce app is a full-stack web application inspired by Behance. It uses Ruby on Rails on the backend, with a PostgreSQL as it's database and React.js with a Redux framework on the frontend.</h4>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="work-name">
+          <h3 id='pr2'>Airless</h3>
+        </div>
+        <div id='pr2' class="work-description">
+          <h4>Airless is a platforming game where the aim is to escape collision between blue circle(operated by users mouse) and red tiles for as much as you can.</h4>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="work-name">
+          <h3 id='pr3'>UnderDOMe</h3>
+        </div>
+        <div id='pr3' class="work-description">
+          <h4>UnderDOMe is a DOM manipulation library inspired by jQuery and writen using JavaScript. It supports some of the most important jQuery features.</h4>
+        </div>
+      </div>
+
+    </div>
+
+     -->
+
   </body>
   <script src="assets/script.js"></script>
->>>>>>> refs/remotes/origin/master
+  <!-- <script src="assets/script-back.js"></script> -->
 </html>
