--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Mikhail Cheburakhtin portfolio v2.0</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
@@ -57,19 +57,6 @@
             <a href="https://github.com/mischatch/UnderDOMe">GitHub</a>
           </div>
           <h4>UnderDOMe is a DOM manipulation library inspired by jQuery and writen using JavaScript. It supports some of the most important jQuery features.</h4>
-        </div>
-      </div>
-
-      <div class="project4">
-        <div class="work-name">
-          <h3 id='pr4'>Scraper</h3>
-        </div>
-        <div id='pr4' class="work-description">
-          <div class="project-links">
-            <!-- <a href="http://mischatch.me/UnderDOMe/">Live</a> -->
-            <a href="https://github.com/mischatch/amazon-review-scraper-script">GitHub</a>
-          </div>
-          <h4>Browser console script for scraping reviews on selected amazon product.</h4>
         </div>
       </div>
 
