--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,19 @@
         </div>
       </div>
 
+      <div class="project5">
+        <div class="work-name">
+          <h3 id='pr5'>Calendar</h3>
+        </div>
+        <div id='pr5' class="work-description">
+          <div class="project-links">
+            <a href="https://react-app-calendar.herokuapp.com/">Live</a>
+            <a href="https://github.com/mischatch/sptf2">GitHub</a>
+          </div>
+          <h4>Fullstack application, utilizes MERN stack(Mongo, Express, React, Node), Moment.js library and deployed on Heroku. Has 4 main faces: calendar, create event, all events and today event. Each created event is displayed on the calendar. User has an ability to delete event.</h4>
+        </div>
+      </div>
+
     </div>
 
 
