added css ui project

--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,18 @@
           <h4>Fullstack application, utilizes MERN stack(Mongo, Express, React, Node), Moment.js library and deployed on Heroku. Has 4 main faces: calendar, create event, all events and today event. Each created event is displayed on the calendar. User has an ability to delete event.</h4>
         </div>
       </div>
+      <div class="project6">
+        <div class="work-name">
+          <h3 id='pr6'>CSS UI</h3>
+        </div>
+        <div id='pr6' class="work-description">
+          <div class="project-links">
+            <a href="https://www.mischatch.me/css-UI/">Live</a>
+            <a href="https://github.com/mischatch/css-UI">GitHub</a>
+          </div>
+          <h4>Random css experiments and tests</h4>
+        </div>
+      </div>
 
     </div>
 
