--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110955206-1"></script>
     <script>
@@ -10,7 +12,7 @@
 
       gtag('config', 'UA-110955206-1');
     </script>
-
+    <script src="assets/script.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikhail Cheburakhtin portfolio website</title>
@@ -48,6 +50,6 @@
     </div>
 
   </body>
-  <script src="assets/script.js"></script>
+
   <!-- <script src="assets/script-back.js"></script> -->
 </html>
