fixed hover states for projects, switched to jquery, added slidetoggle

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Mikhail Cheburakhtin portfolio v2.0</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110955206-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-110955206-1');
+    </script>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
