updated fav pic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikhail Cheburakhtin portfolio website</title>
 
-    <link rel="icon" href="assets/fav.png">
+    <link rel="icon" href="assets/fav.jpg">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
