--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
-    <link rel="icon" href="assets/fav.png">
+    <link rel="icon" href="assets/fav.jpg">
   </head>
   <body class="works-body">
 
