--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikhail Cheburakhtin portfolio website</title>
+    <meta name="title" content="Mikhail Cheburakhtin">
+    <meta name="description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.mischatch.me">
+    <meta property="og:title" content="Mikhail Cheburakhtin">
+    <meta property="og:description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
+    <meta property="og:image" content="assets/photo-bw.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.mischatch.me">
+    <meta property="twitter:title" content="Mikhail Cheburakhtin">
+    <meta property="twitter:description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
+    <meta property="twitter:image" content="assets/photo-bw.jpg">
+
 
     <link rel="icon" href="assets/fav.jpg">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
