--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="assets/script.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikhail Cheburakhtin portfolio website</title>
+    <title>Mikhail Cheburakhtin</title>
     <meta name="title" content="Mikhail Cheburakhtin">
     <meta name="description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
 
