--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="links">
         <span> <a href="mailto:mischa.tch@gmail.com">Mail</a> </span>
-        <span> <a href="https://s3.us-east-2.amazonaws.com/clone-app-dev/_Mikhail+Cheburakhtin+cv.pdf">Resume</a> </span>
+        <span> <a href="https://mischatch-assets.s3.amazonaws.com/Mikhail+Cheburakhtin+cv+2021.pdf">Resume</a> </span>
         <span> <a href="https://www.linkedin.com/in/mikhail-cheburakhtin/">LinkedIn</a> </span>
         <span> <a href="https://github.com/mischatch">GitHub</a> </span>
         <span> <a href="https://www.behance.net/mischa_tch">Behance</a> </span>
