--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -23,14 +23,14 @@
     <meta property="og:url" content="https://www.mischatch.me">
     <meta property="og:title" content="Mikhail Cheburakhtin">
     <meta property="og:description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
-    <meta property="og:image" content="assets/photo-bw.jpg">
+    <meta property="og:image" content="assets/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.mischatch.me">
     <meta property="twitter:title" content="Mikhail Cheburakhtin">
     <meta property="twitter:description" content="Front End Developer proficient in React/Redux, Ruby and Ruby on Rails.">
-    <meta property="twitter:image" content="assets/photo-bw.jpg">
+    <meta property="twitter:image" content="assets/og-image.jpg">
 
 
     <link rel="icon" href="assets/fav.jpg">
