elna byalaya website

--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,22 @@
 
       <div class="project1">
         <div class="work-name">
-          <h3 id='pr1'>Flounce</h3>
+          <h3 id='pr1'>Elena Byalaya</h3>
         </div>
         <div id='pr1' class="work-description">
+          <div class="project-links">
+            <a href="http://flounce-app.herokuapp.com/">Live</a>
+            <a href="https://github.com/mischatch/Flounce-app">GitHub</a>
+          </div>
+          <h4>Portfolio website built with React.js, GraphCMS, Apollo Client and hosted on Google FireBase</h4>
+        </div>
+      </div>
+
+      <div class="project2">
+        <div class="work-name">
+          <h3 id='pr2'>Flounce</h3>
+        </div>
+        <div id='pr2' class="work-description">
           <div class="project-links">
             <a href="http://flounce-app.herokuapp.com/">Live</a>
             <a href="https://github.com/mischatch/Flounce-app">GitHub</a>
@@ -43,11 +56,11 @@
         </div>
       </div>
 
-      <div class="project2">
+      <div class="project3">
         <div class="work-name">
-          <h3 id='pr2'>Airless</h3>
+          <h3 id='pr3'>Airless</h3>
         </div>
-        <div id='pr2' class="work-description">
+        <div id='pr3' class="work-description">
           <div class="project-links">
             <a href="http://mischatch.me/Airless/">Live</a>
             <a href="https://github.com/mischatch/Airless">GitHub</a>
@@ -56,11 +69,11 @@
         </div>
       </div>
 
-      <div class="project3">
+      <div class="project4">
         <div class="work-name">
-          <h3 id='pr3'>UnderDOMe</h3>
+          <h3 id='pr4'>UnderDOMe</h3>
         </div>
-        <div id='pr3' class="work-description">
+        <div id='pr4' class="work-description">
           <div class="project-links">
             <a href="http://mischatch.me/UnderDOMe/">Live</a>
             <a href="https://github.com/mischatch/UnderDOMe">GitHub</a>
@@ -69,7 +82,7 @@
         </div>
       </div>
 
-      <div class="project4">
+      <!-- <div class="project4">
         <div class="work-name">
           <h3 id='pr4'>Scraper</h3>
         </div>
@@ -92,12 +105,12 @@
           </div>
           <h4>Fullstack application, utilizes MERN stack(Mongo, Express, React, Node), Moment.js library and deployed on Heroku. Has 4 main faces: calendar, create event, all events and today event. Each created event is displayed on the calendar. User has an ability to delete event.</h4>
         </div>
-      </div>
-      <div class="project6">
+      </div> -->
+      <div class="project5">
         <div class="work-name">
-          <h3 id='pr6'>CSS UI</h3>
+          <h3 id='pr5'>CSS UI</h3>
         </div>
-        <div id='pr6' class="work-description">
+        <div id='pr5' class="work-description">
           <div class="project-links">
             <a href="https://www.mischatch.me/css-UI/">Live</a>
             <a href="https://github.com/mischatch/css-UI">GitHub</a>
