removed behance link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span> <a href="https://mischatch-assets.s3.amazonaws.com/Mikhail+Cheburakhtin+cv+2021.pdf">Resume</a> </span>
         <span> <a href="https://www.linkedin.com/in/mikhail-cheburakhtin/">LinkedIn</a> </span>
         <span> <a href="https://github.com/mischatch">GitHub</a> </span>
-        <span> <a href="https://www.behance.net/mischa_tch">Behance</a> </span>
+        <!-- <span> <a href="https://www.behance.net/mischa_tch">Behance</a> </span> -->
 
       </div>
       <div class="works-link">
