--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
         </div>
         <div id='pr1' class="work-description">
           <div class="project-links">
-            <a href="http://flounce-app.herokuapp.com/">Live</a>
-            <a href="https://github.com/mischatch/Flounce-app">GitHub</a>
+            <a href="https://elenabyalaya.com/">Live</a>
+
           </div>
           <h4>Portfolio website built with React.js, GraphCMS, Apollo Client and hosted on Google FireBase</h4>
         </div>
