--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         </div>
         <div id='pr1' class="work-description">
           <div class="project-links">
-            <a href="https://elenabyalaya.com/">Live</a>
+            <a target="_blank" href="https://elenabyalaya.com/">Live</a>
 
           </div>
           <h4>Portfolio website built with React.js, GraphCMS, Apollo Client and hosted on Google FireBase</h4>
@@ -49,8 +49,8 @@
         </div>
         <div id='pr2' class="work-description">
           <div class="project-links">
-            <a href="http://flounce-app.herokuapp.com/">Live</a>
-            <a href="https://github.com/mischatch/Flounce-app">GitHub</a>
+            <a target="_blank" href="http://flounce-app.herokuapp.com/">Live</a>
+            <a target="_blank" href="https://github.com/mischatch/Flounce-app">GitHub</a>
           </div>
           <h4>Flounce app is a full-stack web application inspired by Behance. It uses Ruby on Rails on the backend, with a PostgreSQL as it's database and React.js with a Redux framework on the frontend.</h4>
         </div>
@@ -62,8 +62,8 @@
         </div>
         <div id='pr3' class="work-description">
           <div class="project-links">
-            <a href="http://mischatch.me/Airless/">Live</a>
-            <a href="https://github.com/mischatch/Airless">GitHub</a>
+            <a target="_blank" href="http://mischatch.me/Airless/">Live</a>
+            <a target="_blank" href="https://github.com/mischatch/Airless">GitHub</a>
           </div>
           <h4>Airless is a platforming game where the aim is to escape collision between blue circle(operated by users mouse) and red tiles for as much as you can.</h4>
         </div>
@@ -75,8 +75,8 @@
         </div>
         <div id='pr4' class="work-description">
           <div class="project-links">
-            <a href="http://mischatch.me/UnderDOMe/">Live</a>
-            <a href="https://github.com/mischatch/UnderDOMe">GitHub</a>
+            <a target="_blank" href="http://mischatch.me/UnderDOMe/">Live</a>
+            <a target="_blank" href="https://github.com/mischatch/UnderDOMe">GitHub</a>
           </div>
           <h4>UnderDOMe is a DOM manipulation library inspired by jQuery and writen using JavaScript. It supports some of the most important jQuery features.</h4>
         </div>
@@ -112,8 +112,8 @@
         </div>
         <div id='pr5' class="work-description">
           <div class="project-links">
-            <a href="https://www.mischatch.me/css-UI/">Live</a>
-            <a href="https://github.com/mischatch/css-UI">GitHub</a>
+            <a target="_blank" href="https://www.mischatch.me/css-UI/">Live</a>
+            <a target="_blank" href="https://github.com/mischatch/css-UI">GitHub</a>
           </div>
           <h4>Random css experiments and tests</h4>
         </div>
