--- a/index.html
+++ b/index.html
@@ -37,11 +37,28 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
+
   </head>
   <body>
 
     <div class="landing">
+      <div class="info-box">
+        <div class="info-button"><span>i</span></div>
+        <div class="box">
+          <p>Don't like background color of my website — choose your own:</p>
 
+            <div>
+              <!--   <input type="color" id="background" name="background"
+                     value="">
+              <label for="background">Background</label>
+               -->
+                <div id="picker"></div>
+
+            </div>
+
+        </div>
+      </div>
       <div class="hello">
         <h1 id="hello" data-text="Hello!">Hello!</h1>
         <img id="photo" src="assets/photo-bw.jpg" alt="photo">
