--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       </div>
       <div class="about">
         <h2>I’m Mikhail and I’m New York based full-stack developer. I love to architect innovative and comprehensive experiences.
-            Having a graphic and motion design background, I always give attention to UX/UI component.
-            <br>My tools are Ruby, Rails, React and Redux</h2>
+            Having a graphic and motion design background, I always give attention to UX/UI component.</h2>
       </div>
       <div class="links">
         <span> <a href="mailto:mischa.tch@gmail.com">Mail</a> </span>
